--- a/startup/__startup__.html
+++ b/startup/__startup__.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="cs-CZ">
+<!doctype html>
+<html lang="cs">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>
         System startup
@@ -14,22 +12,17 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/static/leprikon/lib/bootstrap/css/bootstrap.min.css"/>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
     <!-- Stylesheet -->
     <link rel="stylesheet" type="text/css" media="all" href="/static/leprikon/css/layout.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="/static/leprikon/css/colors.css"/>
 
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/static/leprikon/lib/jquery.min.js"></script>
 
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!-- Popper (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="/static/leprikon/lib/popper.min.js"></script>
+
+    <!-- Bootstrap -->
     <script src="/static/leprikon/lib/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Shortcut icon -->
@@ -39,7 +32,7 @@
 <body>
     <div id="body">
         <div class="container">
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+            <div class="col-8 col-offset-2 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
                 <img src="/static/leprikon/img/logo.png" width="100%"/>
                 <div class="loader"></div>
             </div>
